<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gray"
    tools:context=".ListActivity">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/title_activity_main"
            android:fontFamily="sans-serif"
            android:textColor="@color/dark_gray"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp"
            android:text="@string/subtitle_activity_main"
            android:textColor="@color/dark_gray"
            android:textSize="20sp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PillsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".ListActivity"
        tools:listitem="@layout/pill_content" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newFloatingActionButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="40dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/all"
        android:cropToPadding="false"
        android:drawingCacheQuality="auto"
        android:fitsSystemWindows="false"
        android:src="@drawable/ic_plus"
        app:backgroundTint="@color/light_green"
        app:barrierAllowsGoneWidgets="false"
        app:fabCustomSize="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PillsRecyclerView"
        app:maxImageSize="60dp"
        app:useCompatPadding="false"
        tools:ignore="VectorDrawableCompat" />
</androidx.constraintlayout.widget.ConstraintLayout>