<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPillActivity"
    android:background="@drawable/background_gray">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleAddTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_activity_add"
        android:textColor="@color/dark_gray"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_gray"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/name_form"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/nameTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/name_form"
                android:background="@drawable/ic_field"
                android:ems="80"
                android:hint="@string/name_form"
                android:inputType="textAutoComplete"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="120dp"
                android:layout_height="56dp"
                android:layout_below="@+id/dateTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:autofillHints="@string/date_form"
                android:background="@drawable/ic_field"
                android:ems="3"
                android:hint="@string/date_form"
                android:inputType="date|text"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameEditText"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/date_form"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_below="@+id/descriptionTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="30dp"
                android:autofillHints="@string/description_form"
                android:background="@drawable/ic_field"
                android:ems="255"
                android:gravity="clip_vertical"
                android:hint="@string/description_form"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="12"
                android:minLines="6"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateEditText"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/description_form"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="240dp"
                android:layout_height="56dp"
                android:layout_below="@+id/descriptionEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_btn"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="271dp"
        android:layout_height="97dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/titleAddTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/logo_2colors" />

</androidx.constraintlayout.widget.ConstraintLayout>