<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gray"
    tools:context=".singlePillDetailActivity">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/all"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_gray" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardMaxElevation="0dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/white">
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="180dp"
            android:layout_marginRight="180dp"
            android:layout_marginBottom="32dp"
            android:text="@string/name"
            android:textColor="@color/dark_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:textSize="20sp"
            android:text="@string/description"
            android:textColor="@color/dark_gray" />
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PillsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".singlePillDetailActivity"
        tools:listitem="@layout/pill_content" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/EditButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="40dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/all"
        android:cropToPadding="false"
        android:drawingCacheQuality="auto"
        android:fitsSystemWindows="false"
        android:src="@drawable/edit"
        app:backgroundTint="@color/light_green"
        app:barrierAllowsGoneWidgets="false"
        app:fabCustomSize="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PillsRecyclerView"
        app:maxImageSize="60dp"
        app:useCompatPadding="false"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/logo_signIn2"
        android:layout_width="0dp"
        android:layout_height="208dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_2colors" />

</androidx.constraintlayout.widget.ConstraintLayout>